DataEngineManager: Defer deleting engines on destruction

This fixes crash on shutdown with Clipboard engine.

BUG: 454854